--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,68 +1,173 @@
-/*#navbar{
-	background-color: white;
-	padding-right: 50px;
-	float: right;
-}*/
-.navbar-brand{
-	background-color: #4aaaa5;
-	height: 90px;
-	width: 250px;
-	text-align: center;
-	color: white;
+html{
+	height: 100%;
 }
-.index-photo{
-	width: 250px;
-	height: 250px;
-	float: left;
-	margin-right: 25px;
-	margin-bottom: 25px;
-}
-.icons{
-	height: 62px;
-	width: 62px;
-}
-.panel-body{
-	text-align: center;
-}
-
-#footer .panel-body{
-	background-color: #666;
-	height: 90px;
-	padding: 30px 0;
-    clear: both;
-    font-size: 12px;
-    color: #fff;
-    color: #ccc;
-    text-align: center;
-    background: #666;
-    border-top: 8px solid #4aaaa5;
-}
-
-#main-container{
+body {
 	background-image: url("../images/concrete_seamless.png");
+	height: 100%;
 }
-h1{
-	font-family: Georgia, Times, "Times New Roman", serif;
-    color: #4aaaa5;
-    padding-bottom: 20px;
-    font-size: 30px;
-    border-bottom: 3px solid #ddd;
+nav {
+	background-color: #fff;
 }
-form{
-	margin-bottom: 30px;
+section {
+	background-color: #fff;
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
-nav{
-	height: 100px;
-	margin-bottom: o;
+aside {
+	background-color: #fff;
+	margin-top: 50px;
+	padding-bottom: 50px;
 }
-/*.container{
-	background-color: white;
-}*/
-h3{
+.navbar {
+	padding: 0px;
+	margin: 0px;
+}
+.navbar-header {
 	background-color: #4aaaa5;
+}
+.navbar-header h1 {
+	color : #fff;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 26px;
+}
+.nav-item {
+	padding: 5px 15px;
+	float: left;
+}
+.v-align {
+	margin-top: 25px;
+}
+.navbar-nav li {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	color: #777;
+}
+.navbar-nav a {
+	color: #777;
+}
+.navbar-nav a:hover {
+	text-decoration: none;
+	color: #FF7F50;
+}
+.contact {
+	padding-bottom: 15px;
+	width: 100%;
+}
+.contact 
+input[type="submit"] {
+	border: none;
+	background-color: #4aaaa5;
+	color: #fff;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	padding: 10px 5px;
+	width: 120px;
+	margin-top: 15px;
+}
+h2 {
+	color: #4aaaa5;
+	font-family: 'Georgia', "Times New Roman", Times, serif;
+	font-size: 28px;
+	padding-bottom: 20px;
+	margin-bottom: 25px;
+	border-bottom: solid 2px #CCC;
+}
+h3 {
+	color: #4aaaa5;
+	font-family: 'Georgia', "Times New Roman", Times, serif;
+	font-size: 22px;
+	padding-bottom: 20px;
+	margin-bottom: 25px;
+	border-bottom: solid 2px #CCC;
+}
+footer {
+	background-color: #666;
+	font-family: 'Georgia', "Times New Roman", Times, serif;
+	color: #CCC;
+	border-top: solid 5px #4aaaa5;
+	padding-top: 25px;
+}
+.image-container {
+	width: 50%;
+	float: left;
 	position: relative;
-      float: left;
-      width: 274px;
-      margin: 20px 0 25px;
-      overflow: auto;
+	z-index: 1;
+}
+.gallery {
+	padding-bottom: 30px;
+}
+.gallery img {
+	width: 100%;
+	height: auto;
+	z-index: 1;
+}
+.float {
+	width: 100%;
+	height: 50px;
+	background-color: #4aaaa5;
+	margin-top: -80px;
+	position: relative;
+	z-index: 10;
+}
+.float h4 {
+	color: #fff;
+	font-family: "Times New Roman", Georgia, Serif;
+	font-size: 22px;
+	text-align: center;
+}
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -85px;
+}
+.footer, .push {
+    height: 85px;
+}
+.footer .container p {
+	margin-top: 10px;
+}
+.clear {
+	clear: both;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+	.navbar-header {
+	  margin-left: -15px;
+	  width: 105%;
+	}
+	.v-align {
+		margin-top: 0px;
+	}
+	section {
+		padding: 20px;
+		margin: 10px 15px;
+	}
+	aside {
+		padding: 20px;
+		margin: 10px 15px;
+	}
+	.contact {
+		padding-bottom: 0px;
+	}
+}
+
+@media only screen and (max-width: 980px){
+	h2 {
+		padding-top: 25px;
+	}
+	section {
+		padding-bottom: 25px;
+	}
+	h3 {
+		padding-top: 25px;
+	}
+	.portfolio {
+		margin: 20px 10px;
+	}
+	.asideMargin {
+		margin: 15px 10px;
+	
 }
