--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,11 +7,23 @@ body {
 }
 nav {
 	background-color: #fff;
+	border-bottom: 1px solid grey;
 }
 section {
 	background-color: #fff;
 	margin-top: 50px;
 	margin-bottom: 50px;
+}
+#title{
+	color: #4aaaa5;
+	padding-left: 20px;
+	font-family: "Times New Roman", Times, serif;
+	font-weight: bold;
+}
+#logo{
+	font-weight: bold;
+	font-size: 35px;
+	padding-bottom: 5px;
 }
 aside {
 	background-color: #fff;
@@ -34,10 +46,7 @@ aside {
 }
 .nav-item {
 	padding: 5px 15px;
-	float: left;
-}
-.v-align {
-	margin-top: 25px;
+	float: right;
 }
 .navbar-nav li {
 	padding-top: 25px;
@@ -48,14 +57,19 @@ aside {
 h1{
 	padding-top: 10px;
 }
-.navbar-nav a {
+.profile{
+	float: left;
+	padding-top: 20px;
+	padding-bottom: 10px;
+}
+.navbar-nav a{
 	color: #777;
 	border-right: 1px solid lightgrey;
-	padding-right: 20px;
+	padding-right: 30px;
 }
 .navbar-nav a:hover {
 	text-decoration: none;
-	color: #FF7F50;
+	color: #4aaaa5;
 }
 .contact {
 	padding-bottom: 15px;
@@ -114,6 +128,10 @@ form{
 	height: auto;
 	z-index: 1;
 }
+#bio{
+	padding-top: 25px;
+	float: 
+}
 .gall {
 	width: 100%;
 	height: 50px;
@@ -135,7 +153,7 @@ form{
     margin: 0 auto;
 }
 .footer{
-    height: 85px;
+    height: 90px;
 }
 .footer .container p {
 	margin-top: 10px;
